force-app/main/default/objects/Twist_HeaderAndFooterUrls__mdt/Twist_HeaderAndFooterUrls__mdt.object-meta.xml
<CustomObject>
    <label>Twist Header And Footer Urls</label>
    <pluralLabel>Twist Header And Footer Urls</pluralLabel>
</CustomObject>