force-app/main/default/objects/Twist_HeaderAndFooterUrls__mdt/fields/locale__c.field-meta.xml
<CustomField>
    <fullName>locale__c</fullName>
    <label>locale</label>
    <length>6</length>
    <type>Text</type>
</CustomField>