force-app/main/default/objects/Twist_HeaderAndFooterUrls__mdt/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>