force-app/main/default/objects/Twist_HeaderAndFooterUrls__mdt/fields/section__c.field-meta.xml
<CustomField>
    <fullName>section__c</fullName>
    <label>section</label>
    <length>22</length>
    <type>Text</type>
</CustomField>