force-app/main/default/objects/Twist_HeaderAndFooterUrls__mdt/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <length>11</length>
    <type>Text</type>
</CustomField>